syntax = "proto3";

package user;

option go_package = "bweng/api/proto/user";

import "google/protobuf/timestamp.proto";

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // Get user by ID
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse);
  
  // Get user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  
  // Get user by username
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  
  // Get all users
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  
  // Update user
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  
  // Delete user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// User message
message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// CreateUserRequest
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

// GetUserByIDRequest
message GetUserByIDRequest {
  uint64 id = 1;
}

// GetUserByEmailRequest
message GetUserByEmailRequest {
  string email = 1;
}

// GetUserByUsernameRequest
message GetUserByUsernameRequest {
  string username = 1;
}

// GetAllUsersRequest
message GetAllUsersRequest {
  // Empty for now, can add pagination later
}

// GetAllUsersResponse
message GetAllUsersResponse {
  repeated User users = 1;
}

// UpdateUserRequest
message UpdateUserRequest {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

// DeleteUserRequest
message DeleteUserRequest {
  uint64 id = 1;
}

// DeleteUserResponse
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// UserResponse
message UserResponse {
  User user = 1;
  string error = 2;
} 